backend-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: old-monolith
spec:
  selector:
    app: old-monolith
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
